--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -12,8 +12,8 @@
 
     <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4 p-5 my-5 bg-secondary rounded text-white">
 
-        {{ form_start(registrationForm) }} {{ form_label(registrationForm.email) }} {{ form_widget(registrationForm.email) }} {# {{ form_row(registrationForm.email) }} #} {{ form_row(registrationForm.plainPassword) }} {{ form_row(registrationForm.agreeTerms)
-        }}
+        {{ form_start(registrationForm) }} {{ form_row(registrationForm.prenom) }} {{ form_row(registrationForm.nom) }} {{ form_row(registrationForm.adresse) }} {{ form_row(registrationForm.telephone) }} {{ form_label(registrationForm.email) }} {{ form_widget(registrationForm.email)
+        }} {# {{ form_row(registrationForm.email) }} #} {{ form_row(registrationForm.plainPassword) }} {{ form_row(registrationForm.agreeTerms) }}
 
         <div class="row">
             <div class="col-12 text-center">
