--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.html.twig' %} {% block title %}Hello HomeController!{% endblock %} {% block body %}
+<h1>Bienvenue sur Kiloukoi</h1>
 
-{% block title %}Hello HomeController!{% endblock %}
 
-{% block body %}
- <h1>Bienvenue sur Kiloukoi</h1>
+
 {% endblock %}
