On a retiré le body stylesheet du fichier base html twig, car cela écrasait le style bootstrap d'origine En conséquence si on veux mettre notre propre style il faudra mettre un body stylesheet du theme choisis. Donc lorsque nous voulons un theme twig ou bootstrap on doit aller le mettre dans le "form theme" du fichier twig.yaml. Nous avons importer un thème bootswatch donc on a crée un dossier css bootstrap.min.css ou nous avons collés le code.
rajout de balise div fermantes dans le index html twig

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,6 @@
 /* **************************************** HEADER **************************************** */
 
-header{
+.mainAcceuil{
     width: 100%;
     height: 100vh;
     background-image: url('../img/header.jpg');
