--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,9 +1,3 @@
-<<<<<<< HEAD
-
-.navbar-toggler-icon{
-    color: black;
-}
-=======
 /* **************************************** SETTINGS **************************************** */
 
 *{
@@ -30,4 +24,7 @@ footer a{
     footer a:hover{
         color: #888;
     }
->>>>>>> 6cb4bb1a101df8469d41bd7d7cf62b6a091e1ce2
+
+.navbar-toggler-icon {   
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg%27%3E%3Cpath stroke='rgba(0,0,0, )' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important; }  
+.navbar-toggler { border-color: rgb(0, 0, 0) !important; }
