j'ai corriger le d' outils dans le titre h2

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -55,7 +55,7 @@
     </nav>
 
     <h1 class="text-center">KILOUKOI</h1>
-    <h2 class="text-center">L'agence de location d&egrave;outils 2.0</h2>
+    <h2 class="text-center">L'agence de location d'outils 2.0</h2>
 
   </header>
 
