--- a/templates/outils/index.html.twig
+++ b/templates/outils/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Outils index{% endblock %}
 
 {% block body %}
-    <h1>Outils index</h1>
+    <h1>Outils</h1>
 
     <table class="table">
         <thead>
