Travail sur les login et register pour faire le lien entres eux

--- a/templates/outils/new.html.twig
+++ b/templates/outils/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New Outils{% endblock %}
 
 {% block body %}
-    <h1>Create new Outils</h1>
+    <h1>Je renseigne mon outil</h1>
 
     {{ include('outils/_form.html.twig') }}
 
-    <a href="{{ path('outils_index') }}">back to list</a>
+    <a href="{{ path('outils_index') }}">Retour à la liste</a>
 {% endblock %}
