J'ai modifier la nav bar: - ajout du button connexion a droite - changement de la couleur de la navbar et des - j'ai enlever le button de recherche en haut a droit -j'ai modifier le contenu de la navbar(menu) - j'ai modifier egalement la couleur du menu

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,27 +35,21 @@
       <div class="collapse navbar-collapse" id="menu">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#"> Je consulte les annonces <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#"> Je Loue mes outils</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> Je loue mes outils </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"> Je vend mes outils </a>
+            <a class="nav-link" href="#"> Consulter les annonces </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"> Forum </a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Rechercher">
-          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Rechercher</button>
-        </form>
+        <button type="button" class="btn btn-warning">Connexion</button>
       </div>
     </nav>
 
     <h1 class="text-center">KILOUKOI</h1>
-    <h2 class="text-center">L'agence de location d'outils 2.0</h2>
+    <h2 class="text-center">L'agence de location d'outils 3.0</h2>
 
   </header>
 
