--- a/public/css/base.css
+++ b/public/css/base.css
@@ -18,9 +18,7 @@ footer .logo img{
 }
 /* .bg-light {
 backg*/
-.bg-light {
-    background-color: #ff00ff;;
-    }
+
 footer a{
     color: #000;
 }
@@ -32,3 +30,16 @@ footer a{
 .navbar-toggler-icon {   
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg%27%3E%3Cpath stroke='rgba(0,0,0, )' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important; }  
 .navbar-toggler { border-color: rgb(0, 0, 0) !important; }
+
+a{
+    color:rgb(255, 255, 255);
+    font-size: 20px;
+}
+navbar.btn-warning {
+    background-color: rgb(255,151,0);
+}
+button.btn-warning {
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+
+}
