Récup les modifs d'Anaïs le 10/06

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,12 +1,10 @@
 {% extends 'base.html.twig' %} {% block title %}inscription{% endblock %} {% block body %}
 
-<div class="container-fluid">
 
-    <header class="row">
+
+    <header>
         <h1 class="col-12 bg-light text-center text-dark p-5">
-            KILOUKOI
-            <div class="dropdown-divider"></div>
-            <span class="text-secondary">INSCRIVEZ VOUS</span>
+            <div class="text-secondary">INSCRIVEZ VOUS VITE</div>
         </h1>
     </header>
 
@@ -24,7 +22,7 @@
 
         <div class="row">
             <div class="col-12 text-center">
-                <button class="btn btn-outline-light">VALIDATION</button>
+                <button class="btn btn-outline-light">Je m'inscris sur ce super site</button>
 
 
             </div>
