--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
     </title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{asset("css/base.css")}}"> 
+    <link rel="stylesheet" href="{{asset("css/base.css")}}">
     {% block stylesheets %}{% endblock %}
 
 </head>
@@ -33,16 +33,27 @@
       <div class="collapse navbar-collapse" id="menu">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#"> Je Loue mes outils</a>
+            <a class="nav-link" href="{{ path('outils_new') }}"> Je Loue mes outils</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> Consulter les annonces </a>
+            <a class="nav-link" href="#"> Rechercher des outils </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"> Forum </a>
           </li>
         </ul>
-        <button type="button" class="btn btn-warning">Connexion</button>
+
+        <ul>
+
+           <li>
+            <a class="btn btn-warning" href="login" role="button">CONNEXION</a>
+          </li>
+
+        </ul>
+       
+        </div>
+         
+      
       </div>
     </nav>
 
