jeudi 11 juin 2020 : - j'ai corriger mon erreur de redirection pour le button louer mes outils,    au lieu que l'utilisateur tombe sur outil_new, il faut qu'il tombe sur le register afin qu'il soit obliger de s'iscrire avant toute location d'outils.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="menu">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{{ path('outils_new') }}"> Je Loue mes outils</a>
+            <a class="nav-link" href="{{ path('app_register') }}"> Je Loue mes outils</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"> Rechercher des outils </a>
