--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
 
 
     <title>
-        KILOUKOI - Acceuil
+        KILOUKOI - Accueil
     </title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -25,7 +25,7 @@
     <header>
 
         <nav class="navbar navbar-expand-lg bg-warning">
-            <a class="navbar-brand" href="#">Kiloukoi</a>
+            <a class="navbar-brand" href="#">Attente logo Jo</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -33,16 +33,16 @@
       <div class="collapse navbar-collapse" id="menu">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#"> Je Loue mes outils</a>
+            <a class="nav-link" href="#">JE LOUE MES OUTILS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> Consulter les annonces </a>
+            <a class="nav-link" href="#">JE RECHERCHE UN OUTIL </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> Forum </a>
+            <a class="nav-link" href="#">FORUM</a>
           </li>
         </ul>
-        <button type="button" class="btn btn-warning">Connexion</button>
+        <button type="button" class="btn btn-outline-secondary">JE ME CONNECTE</button>
       </div>
     </nav>
 
