--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{% trans %}Accueil{% endtrans %}{% endblock %}
 
 {% block stylesheets %}
-<link rel="stylesheet" href="{{ asset('css/home.css') }}">
+<link rel="stylesheet" href="{{ asset('css/base.css') }}">
 {% endblock %}
 
 {% block body %}
