Conception et mise en forme du formulaire de recherche d'outils

--- a/templates/search_tool/index.html.twig
+++ b/templates/search_tool/index.html.twig
@@ -4,4 +4,47 @@
 
 {% block body %}
 
+<header>
+    <h1 class="col-12 bg-light text-center text-dark p-5">
+        <div class="text-secondary">DE QUEL OUTILS AI-JE BESOIN ?</div>
+    </h1>
+</header>
+
+<div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4 p-5 my-5 bg-secondary rounded text-white">
+
+<form>
+    <div class="form-group">
+        <input class="form-control" type="text" placeholder="Je nomme l'outil que je recherche">      
+    </div>
+    <div class="form-group">
+      <label for="exampleFormControlSelect1">Je choisi la catégorie</label>
+      <select class="form-control" id="exampleFormControlSelect1">
+        <option>Toutes les catégories</option>
+        <option>Maçonnerie</option>
+        <option>Electricité</option>
+        <option>Mécanique</option>
+        <option>Plomberie</option>
+        <option>Electroportatif</option>
+        <option>Menuiserie</option>
+        <option>Jardinage</option>
+        <option>Peinture</option>
+        <option>Echafaudage/Echelle</option>
+        <option>Divers</option>
+      </select>
+    </div>
+    <div class="form-group">
+        <input class="form-control" type="text" placeholder="Je renseigne mon lieu de recherche">      
+    </div>
+    <div class="row">
+        <div class="col-12 text-center">       
+        <button class="btn btn-outline-light">JE LANCE MA RECHERCHE</button>
+        </div>
+    </div>
+
+
+    
+  </form>
+  </div>
+
+
 {% endblock %}
