Le 15 juin, modifs des intitulés des champs et redirection de 'Je recherche un outil' de l'accueil vers le 'search_tool'.

--- a/templates/search_tool/index.html.twig
+++ b/templates/search_tool/index.html.twig
@@ -6,7 +6,7 @@
 
 <header>
     <h1 class="col-12 bg-light text-center text-dark p-5">
-        <div class="text-secondary">DE QUEL OUTILS AI-JE BESOIN ?</div>
+        <div class="text-secondary">JE RECHERCHE ... </div>
     </h1>
 </header>
 
@@ -14,10 +14,10 @@
 
 <form>
     <div class="form-group">
-        <input class="form-control" type="text" placeholder="Je nomme l'outil que je recherche">      
+        <input class="form-control" type="text" placeholder="De quel outil ai-je besoin ?">      
     </div>
     <div class="form-group">
-      <label for="exampleFormControlSelect1">Je choisi la catégorie</label>
+      <label for="exampleFormControlSelect1">Dans quelle catégorie ?</label>
       <select class="form-control" id="exampleFormControlSelect1">
         <option>Toutes les catégories</option>
         <option>Maçonnerie</option>
@@ -33,8 +33,31 @@
       </select>
     </div>
     <div class="form-group">
-        <input class="form-control" type="text" placeholder="Je renseigne mon lieu de recherche">      
+        <input class="form-control" type="text" placeholder="Mon lieu de recherche">      
     </div>
+    <form>
+        <div class="form-row align-items-center">
+          <div class="col-auto my-1">
+            <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
+            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
+              <option selected>Autour de moi...</option>
+              <option value="1">Dans un rayon de 10 kms</option>
+              <option value="2">Dans un rayon de 20 kms</option>
+              <option value="3">Dans un rayon de 30 kms</option>
+              <option value="3">Dans un rayon de 40 kms</option>
+              <option value="3">Dans un rayon de 50 kms</option>
+              <option value="3">Dans un rayon de 100 kms</option>
+            </select>
+          </div>
+          <div class="col-auto my-1">
+            <div class="custom-control custom-checkbox mr-sm-2">
+              <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
+              <label class="custom-control-label" for="customControlAutosizing">Se souvenir de mon choix</label>
+            </div>
+          </div>
+          
+        </div>
+      </form>
     <div class="row">
         <div class="col-12 text-center">       
         <button class="btn btn-outline-light">JE LANCE MA RECHERCHE</button>
