--- a/templates/tools/index.html.twig
+++ b/templates/tools/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mes outils{% endblock %}
+{% block title %}Mes outils perso{% endblock %}
 
 {% block body %}
 <style>
