AJOUT DE LA MAP !!!!! Integration de la map dans l'onglet outils, map faite grace a open street map et la librairie leaflet. Ajout du dossier osMap afin de construire la map, celui est constitué des fichers app.js ou se trouve le code de la carte. Ainsi que le fichier index php qui permet nottament l'appel de leaflet. J'ai egalement rajouté le vendor.js. J'ai aussi ajouté la ligne div id map pour afficher la carte en mettant directement le css a l'interieur de la balise html.

--- a/templates/outils/show.html.twig
+++ b/templates/outils/show.html.twig
@@ -4,6 +4,9 @@
 
 {% block body %}
     <h1>Outils</h1>
+    
+    <div id="map" style="width:400px; height:400px";>
+    </div>
 
     <table class="table">
         <tbody>
@@ -31,4 +34,5 @@
     <a href="{{ path('outils_edit', {'id': outil.id}) }}">edit</a>
 
     {{ include('outils/_delete_form.html.twig') }}
+    
 {% endblock %}
