--- a/templates/search_tool/index.html.twig
+++ b/templates/search_tool/index.html.twig
@@ -1,72 +1,58 @@
-{% extends 'base.html.twig' %}
 
-{% block title %}Recherche{% endblock %}
 
-{% block body %}
+{% extends 'base.html.twig' %} {% block title %}Recherche{% endblock %} {% block body %}
 
 <header>
+
     <h1 class="col-12 bg-light text-center text-dark p-5">
+
         <div class="text-secondary">JE RECHERCHE ... </div>
+
     </h1>
+
 </header>
 
 <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4 p-5 my-5 bg-secondary rounded text-white">
 
-<form>
-    <div class="form-group">
-        <input class="form-control" type="text" placeholder="De quel outil ai-je besoin ?">      
-    </div>
-    <div class="form-group">
-      
-      <select class="form-control" id="exampleFormControlSelect1">
+    <form>
+
         {{ form_start(form) }}
 
         <div class="form-group">{{ form_row(form.outil) }}</div>
+
         <div class="form-group">{{ form_row(form.categorie) }}</div>
+
         <div class="form-group">{{ form_row(form.lieu) }}</div>
-        <div class="form-group">{{ form_row(form.rayon)}}</div>       
-       
-       
 
-        {{ form_end(form) }}       
-      </select>
-    </div>
-    <div class="form-group">
-        <input class="form-control" type="text" placeholder="Mon lieu de recherche">      
-    </div>
-    <form>
-        <div class="form-row align-items-center">
-          <div class="col-auto my-1">
-            <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
-            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-              <option selected>Autour de moi...</option>
-              <option value="1">Dans un rayon de 10 kms</option>
-              <option value="2">Dans un rayon de 20 kms</option>
-              <option value="3">Dans un rayon de 30 kms</option>
-              <option value="3">Dans un rayon de 40 kms</option>
-              <option value="3">Dans un rayon de 50 kms</option>
-              <option value="3">Dans un rayon de 100 kms</option>
-            </select>
-          </div>
-          <div class="col-auto my-1">
+        <div class="form-group">{{ form_row(form.rayon)}}</div>
+
+        {{ form_end(form) }}
+
+        <div class="col-auto my-1">
+
             <div class="custom-control custom-checkbox mr-sm-2">
-              <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
-              <label class="custom-control-label" for="customControlAutosizing">Se souvenir de mon choix</label>
+
+                <input type="checkbox" class="custom-control-input" id="customControlAutosizing">
+
+                <label class="custom-control-label" for="customControlAutosizing">Se souvenir de mon choix</label>
+
             </div>
-          </div>
-          
+
         </div>
-      </form>
-    <div class="row">
-        <div class="col-12 text-center">       
-        <button class="btn btn-outline-light">JE LANCE MA RECHERCHE</button>
+
+        <div class="col-12 text-center">
+
+            <input class="btn btn-outline-light" type="submit" value="JE LANCE MA RECHERCHE">
+
         </div>
-    </div>
 
+</div>
 
-    
-  </form>
-  </div>
+</form>
 
+</div>
 
 {% endblock %}
+
+
+
