je recupere mardi 23 juin les modifications d'enzo et de chris

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -54,9 +54,7 @@ footer.mb-auto, .my-auto {
 
 
 /* **************************************** NAVBAR **************************************** */
-.navbar-toggler-icon {   
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg%27%3E%3Cpath stroke='rgba(0,0,0, )' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
- }  
+
 
 .navbar-toggler { 
     border-color: rgb(0, 0, 0) !important;
@@ -68,7 +66,7 @@ a{
 }
 
 navbar.btn-warning {
-    background-color: #ff9900e8;
+    background-color: rgba(255, 153, 0, 0.91);
 }
 
 /* ****************************************BOUTON**************************************** */
@@ -76,4 +74,15 @@ navbar.btn-warning {
     color: rgb(255, 255, 255);
     font-size: 20px;
     font-weight: lighter;
+}
+.dropdown-menu{
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: lighter;
+}
+.dropdown-menu a {
+    color:white; 
+}
+.dropdown-menu.show {
+    color:white; 
 }
