Réussite de j'ajout de l'API geolocalisation, le site peut désormais détécter avec notre accord ou nous nous trouvons. Pour voir les modifications, allez dans le app.js.

--- a/templates/outils/show.html.twig
+++ b/templates/outils/show.html.twig
@@ -5,8 +5,8 @@
 {% block body %}
     <h1>Outils</h1>
     
-    <div id="map" style="width:400px; height:400px";>
-    </div>
+    
+    
 
     <table class="table">
         <tbody>
@@ -28,6 +28,8 @@
             </tr>
         </tbody>
     </table>
+
+    <div id="map" style="width:800px; height:400px;"></div>
 
     <a href="{{ path('outils_index') }}">back to list</a>
 
