--- a/templates/search_tool/index.html.twig
+++ b/templates/search_tool/index.html.twig
@@ -19,7 +19,7 @@
         {{ form_start(form) }}
 
         <div class="form-group">{{ form_row(form.outil) }}</div>
-        <div class="form-group">{{ form_row(form.categorie) }}</div>
+        <div class="form-group">{{ form_row(form.categories) }}</div>
         <div class="form-group">{{ form_row(form.lieu) }}</div>
         <div class="form-group">{{ form_row(form.rayon)}}</div>
 
