--- a/templates/outils/_form.html.twig
+++ b/templates/outils/_form.html.twig
@@ -1,6 +1,6 @@
 
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button type="button" class="btn btn-success">{{ button_label|default('Enregistrer') }}</button>
+    <button type="submit" class="btn btn-success">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
 
