--- a/templates/search_tool/index.html.twig
+++ b/templates/search_tool/index.html.twig
@@ -20,8 +20,8 @@
 
         <div class="form-group">{{ form_row(form.outil) }}</div>
         <div class="form-group">{{ form_row(form.categories) }}</div>
-        <div class="form-group">{{ form_row(form.lieu) }}</div>
-        <div class="form-group">{{ form_row(form.rayon)}}</div>
+        <div class="form-group">{{ form_row(form.emplacement) }}</div>
+        <div class="form-group">{{ form_row(form.je_recherche_autour_de_moi)}}</div>
 
         
 
@@ -35,7 +35,7 @@
         </div>
 
         <div class="col-12 text-center">
-            <input class="btn btn-outline-light" value="JE LANCE MA RECHERCHE">
+            <input class="btn btn-outline-light" type="submit" value="JE LANCE MA RECHERCHE">
         </div>
 
         {{ form_end(form) }}
