Le 28 juin, l'enregistrement des outils se fait bien. Plus le temps de coder, pps en cours.

--- a/templates/outils/index.html.twig
+++ b/templates/outils/index.html.twig
@@ -24,8 +24,8 @@
                 <td>{{ outil.description }}</td>
                 <td>{{ outil.image }}</td>
                 <td>
-                    <a href="{{ path('outils_show', {'id': outil.id}) }}">show</a>
-                    <a href="{{ path('outils_edit', {'id': outil.id}) }}">edit</a>
+                    <a href="{{ path('outils_show', {'id': outil.id}) }}">Montrer l'outil</a>
+                    <a href="{{ path('outils_edit', {'id': outil.id}) }}">Modifier l'outil</a>
                 </td>
             </tr>
         {% else %}
